tests/NormalTests/paczka2/big_fuzzy/94084962.err
Error in line 4: nae4PzdS7U A324 82,4
Error in line 6: nae4PzdS7U A58 81,3
Error in line 15: KImTRBDd A58 132,2
Error in line 22: LB58 A572 22,1
Error in line 36: KImTRBDd A572 10,1
Error in line 43: LB58 A58 53,3
Error in line 31: nae4PzdS7U A58 53,5
Error in line 55: uygigwhAV A294 400,2
Error in line 35: 00L A294 74,9
Error in line 64: nAK A324 51,0
Error in line 78: A572 A324 56,06
Error in line 70: nAK A294 20,4
Error in line 80: nAK A58 80,2
Error in line 85: nAK A294 55,0
Error in line 77: A572 A324 11,9
Error in line 101: 00L A324 87,45
Error in line 102: 00L A572 97,1
Error in line 104: 00L A294 30,9
Error in line 108: KImTRBDd A324 7,2
Error in line 124: nae4PzdS7U A324 44,1
Error in line 106: nAK A58 14,3
Error in line 128: nae4PzdS7U A572 37,8
Error in line 125: KImTRBDd A294 329,8
Error in line 139: KImTRBDd A572 14,6
Error in line 158: nae4PzdS7U A58 93,3
Error in line 175: KImTRBDd A572 41,6
Error in line 173: nAK A572 72,0
Error in line 167: LB58 A294 24,4
Error in line 189: LB58 A294 194,3
Error in line 200: 00L A572 11,9
Error in line 190: nae4PzdS7U A58 22,6
Error in line 194: uygigwhAV A324 17,7
Error in line 212: LB58 A58 12,6
Error in line 209: A572 A294 35,8
Error in line 216: LB58 A294 37,9
Error in line 218: A572 A572 33,3
Error in line 215: uygigwhAV A58 66,6
Error in line 225: KImTRBDd A324 92,3
Error in line 226: nae4PzdS7U A572 41,4
